[tool.poetry]
name = "nonebot_plugin_abstract"
version = "1.0.4"
description = "Plugin for nonebot2 that abstracts statements"
authors = ["CherryCherries <cherrycherries@foxmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CherryCherries/nonebot-plugin-abstract"
repository = "https://github.com/CherryCherries/nonebot-plugin-abstract"

[tool.poetry.dependencies]
python = "^3.7.3"
jieba = "0.42.1"
pinyin = "0.4.0"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
